--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -3,7 +3,7 @@ name: Build and Deploy Documentation
 on:
   push:
     branches:
-      - main 
+      - main
 
 jobs:
   build:
@@ -11,19 +11,17 @@ jobs:
 
     steps:
     - name: Checkout the code
-      uses: actions/checkout@v2
+      uses: actions/checkout@v3  # Updated to v3
 
     - name: Set up Python
-      uses: actions/setup-python@v2
+      uses: actions/setup-python@v3  # Updated to v3
       with:
-        python-version: '3.x'  # Use your desired Python version
+        python-version: '3.x'
 
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r requirements.txt
-        pip install sphinx
-        pip install sphinx_rtd_theme
+        pip install -r requirements.txt  # Ensure sphinx and sphinx_rtd_theme are in requirements.txt
 
     - name: Build the documentation
       run: |
@@ -35,5 +33,5 @@ jobs:
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}  # GitHub Actions automatically provides this
         publish_dir: ./docs/_build/html  # Path to the built HTML docs
-        publish_branch: gh-pages  # Target branch for GitHub Pages
-        keep_files: false  # Optional: Keep existing files in the branch
+        publish_branch: gh-pages
+        keep_files: false
