--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -21,10 +21,9 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r requirements.txt
         pip install sphinx
         pip install sphinx_rtd_theme
-        pip install -e .
+        pip install .
 
     - name: Build the documentation
       run: |
